crates/syntax/tests/snapshots/parser__basic-3.snap
---
source: crates/syntax/tests/parser.rs
expression: "lex(\"1+ 1\")"
---
Ok(
    [
        SpannedToken {
            span: 0..1,
            token: LiteralInt(
                "1",
            ),
        },
        SpannedToken {
            span: 1..2,
            token: OperatorAdd,
        },
        SpannedToken {
            span: 3..4,
            token: LiteralInt(
                "1",
            ),
        },
    ],
)
