crates/syntax/tests/snapshots/parser__basic.snap
---
source: crates/syntax/tests/parser.rs
expression: "lex(\"1\")"
---
Ok(
    [
        SpannedToken {
            span: 0..1,
            token: LiteralInt(
                "1",
            ),
        },
    ],
)
