crates/syntax/tests/snapshots/parser__larger-2.snap
---
source: crates/syntax/tests/parser.rs
expression: "lex(\"a = 1 // comment\")"
---
Ok(
    [
        SpannedToken {
            span: 0..1,
            token: Identifier(
                "a",
            ),
        },
        SpannedToken {
            span: 2..3,
            token: OperatorAssignment,
        },
        SpannedToken {
            span: 4..5,
            token: LiteralInt(
                "1",
            ),
        },
        SpannedToken {
            span: 6..16,
            token: SingleLineComment(
                "// comment",
            ),
        },
    ],
)
