crates/syntax/tests/snapshots/parser__parser_addition identifier.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..10,
        statements: StatementList {
            span: 0..10,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..10,
                    extras: ItemExtras {
                        leading: LeadingExtras(
                            [],
                        ),
                        trailing: TrailingExtras(
                            [],
                        ),
                    },
                    attributes: [],
                    expression: BinaryOperation(
                        BinaryOperation {
                            span: 0..10,
                            lhs: QualifiedName(
                                QualifiedName {
                                    span: 0..6,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [
                                                Whitespace(
                                                    " ",
                                                ),
                                            ],
                                        ),
                                    },
                                    parts: [
                                        Identifier {
                                            span: 0..6,
                                            name: "length",
                                        },
                                    ],
                                },
                            ),
                            operation: BinaryOperator {
                                span: 7..8,
                                operation: Add,
                            },
                            rhs: Literal(
                                Literal {
                                    span: 9..10,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    literal: Integer(
                                        IntegerLiteral {
                                            span: 9..10,
                                            value: 1,
                                            raw: "1",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
