crates/syntax/tests/snapshots/parser__parser_array access.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..6,
        statements: StatementList {
            span: 0..6,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..6,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attributes: [],
                        expression: ElementAccess(
                            ElementAccess {
                                span: 0..6,
                                value: QualifiedName(
                                    QualifiedName {
                                        span: 0..3,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        parts: [
                                            Identifier {
                                                span: 0..3,
                                                name: "foo",
                                            },
                                        ],
                                    },
                                ),
                                element_chain: [
                                    Element {
                                        span: 3..6,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        inner: ArrayElement(
                                            Literal(
                                                Literal {
                                                    span: 4..5,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [],
                                                        ),
                                                    },
                                                    literal: Integer(
                                                        IntegerLiteral {
                                                            span: 4..5,
                                                            value: 1,
                                                            raw: "1",
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
